--- a/.github/workflows/publish-ossrh.yml
+++ b/.github/workflows/publish-ossrh.yml
@@ -1,29 +1,29 @@
-name: Release to Maven Central (Deploy Snapshot or Stage Release)
-
-on:
-  push:
-    branches: [master, 1.x, release]
-
 jobs:
   release:
     if: github.repository == 'jdbc-observations/datasource-proxy'
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up Maven Central Repository
-        uses: actions/setup-java@v3
-        with:
-          java-version: 8
-          distribution: temurin
-          server-id: ossrh
-          server-username: MAVEN_USERNAME
-          server-password: MAVEN_PASSWORD
-          gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }}
-          gpg-passphrase: MAVEN_GPG_PASSPHRASE
-      - name: Publish package
-        run: ./mvnw --batch-mode deploy -DskipTests=true -Pgithub-ossrh
-        env:
-          MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
-          MAVEN_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
-          MAVEN_GPG_PASSPHRASE: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
-
+    - continue-on-error: true
+      uses: actions/checkout@v3
+    - continue-on-error: true
+      name: Set up Maven Central Repository
+      uses: actions/setup-java@v3
+      with:
+        distribution: temurin
+        gpg-passphrase: MAVEN_GPG_PASSPHRASE
+        gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }}
+        java-version: 8
+        server-id: ossrh
+        server-password: MAVEN_PASSWORD
+        server-username: MAVEN_USERNAME
+    - continue-on-error: true
+      env:
+        MAVEN_GPG_PASSPHRASE: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
+        MAVEN_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
+        MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+      name: Publish package
+      run: ./mvnw --batch-mode deploy -DskipTests=true -Pgithub-ossrh
+name: Release to Maven Central (Deploy Snapshot or Stage Release)
+on:
+  repository_dispatch:
+    types: trigger-ga___publish-ossrh.yml
